src/tramabol/ezlibcob/stubs.h

typedef unsigned long size_t;
/* Field attribute structure */

typedef struct __cob_field_attr {
	unsigned short		type;		/* Field type [TODO GC4: enum] */
	unsigned short		digits;		/* Digit count */
	signed short		scale;		/* Field scale */
	unsigned short		flags;		/* Field flags */
	const cob_pic_symbol	*pic;		/* Pointer to picture string */
} cob_field_attr;
/* Field structure */

typedef struct __cob_field {
	size_t			size;		/* Field size */
	unsigned char		*data;		/* Pointer to field data */ //TODO: buffer with size
	const cob_field_attr	*attr;		/* Pointer to attribute */
} cob_field;
COB_EXPIMP int		cob_display_text (const char * );
// (* Functions in termio.c *)

COB_EXPIMP void cob_display	(const int, const int, const int, ...) VA_N(cob_field *, 32); /* NIST: 19, TS: 19 */
COB_EXPIMP void cob_accept	(cob_field * );