src/tramabol/libcob-ctypes/libcob_termio.ml

(**************************************************************************)
(*                                                                        *)
(*                        SuperBOL OSS Studio                             *)
(*                                                                        *)
(*  Copyright (c) 2022-2026 OCamlPro SAS                                  *)
(*                                                                        *)
(* All rights reserved.                                                   *)
(* This source code is licensed under the GNU Affero General Public       *)
(* License version 3 found in the LICENSE.md file in the root directory   *)
(* of this source tree.                                                   *)
(*                                                                        *)
(**************************************************************************)

open Ctypes

(* This Types_generated module is an instantiation of the Types functor defined
   in the libcob_types.ml file.  It's generated by a C program that Dune creates
   and runs behind the scenes. *)
module Types = Libcob_types_generated

module Functions (Foreign: Ctypes.FOREIGN) = struct
  open Foreign

  let display_text =
    foreign "cob_display_text" @@
      string @-> returning int

  let accept =                                                       (* field *)
    foreign "cob_accept" @@
      ptr Types.cob_field @-> returning void

  (* let display =                   (\* to_device / newline / varcnt / fields... *\) *)
  (*   foreign "cobaux_display" @@ *)
  (*     int @-> int @-> int @-> ptr (ptr Types.cob_field) @-> returning void *)

  let display =                   (* to_device / newline / varcnt / fields... *)
    foreign "cob_display" @@
      int @-> int @-> int @-> ptr Types.cob_field @-> returning void

end
